# web_hook

./: .gitignore  ReadME.md  config.py  pyproject.toml  run.py
web_hook/: __init__.py  exceptions.py
web_hook/json_file/: infra_sre_warning.json  sample.json
web_hook/notes/: helpers.py  models.py  routes.py
web_hook/yaml_file/: notes.yaml
