[tool.poetry]
name = "webhook"
version = "0.1.0"
description = ""
authors = ["Mohammad Nasimi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
dotenv = "^0.9.9"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
